--- a/src/app/sharedComponents/backToTop/backToTop.component.less
+++ b/src/app/sharedComponents/backToTop/backToTop.component.less
@@ -7,7 +7,7 @@
   opacity: .7;
   height: 30px;
   width: 30px;
-  bottom: 30px;
+  bottom: 100px;
   right: @vMargin;
   background: transparent;
   transition: all @defaultTransitionTimeout;
