--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -16,11 +16,12 @@ body {
   background: @mainThemeColor;
   color: @mainTextColor;
   font-size: 18px;
-  font-family: 'Catamaran', sans-serif;
+  font-family: 'PT Sans', sans-serif;
   line-height: 1.25;
   //font: 1rem 'Frutiger', 'Helvetica Neue', sans-serif;
 
-  h1, h2, h3 {
+  h1, h2, h3, h4 {
+    font-family: 'Catamaran', sans-serif;
     font-weight: 400;
     margin: 0;
     margin-bottom: @hPadding;
