--- a/src/styles/menus.less
+++ b/src/styles/menus.less
@@ -7,6 +7,7 @@
   padding-top: 0;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, .3);
+  font-size: .9em;
 
   li {
     margin: 0;
@@ -16,7 +17,7 @@
       text-overflow: ellipsis;
       color: @mainTextColor;
       transition: all .2s;
-      padding: @hPadding @vPadding;
+      padding: @vPadding;
 
       &:hover {
         background: @mainLinkHoverColor;
